--- a/src/user/components/Filter/Filter.css
+++ b/src/user/components/Filter/Filter.css
@@ -1,5 +1,6 @@
 .search-Btn {
     background-color: rgb(126, 117, 213);
+    box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.2);
     color: rgb(255, 255, 255);
     margin: 4px;
     padding: 10px 16px;
@@ -13,10 +14,49 @@
 
 .filter-search {
     display: flex;
+    position: relative;
+    justify-content: center;
+    z-index: 10;
 
     & input {
         margin: 2px 8px;
         padding: 0px 15px;
         width: 20vw;
+        max-height: 42px;
+    }
+
+    & #selectInput {
+        padding: 0px 10px;
+        border-radius: 5px;
+        margin: 2px 4px;
+    }
+}
+
+.card-container {
+    display: flex;
+    position: relative;
+    flex-direction: row;
+    flex-wrap: wrap;
+    z-index: 10;
+    justify-content: start;
+    margin: 40px auto;
+}
+
+.cards-results {
+    display: flex;
+    max-width: 100vw;
+    flex-wrap: wrap;
+    padding: 0 40px;
+}
+
+@media screen and (min-width:300px) {
+    .filter-search {
+        margin-top: -200px;
+    }
+}
+
+@media screen and (min-width:1024px) {
+    .filter-search {
+        margin-top: -100px;
     }
 }
