--- a/src/user/components/NavBar/NavBar.css
+++ b/src/user/components/NavBar/NavBar.css
@@ -1,15 +1,16 @@
 nav {
-    position: sticky;
+    position: fixed;
+    margin-top: 0;
     display: flex;
     justify-content: space-between;
-    
     align-items: center;
-    background-color: rgb(1, 7, 44); /*color provisional para maquetar*/
+    /* background-color: rgb(1, 7, 44); color provisional para maquetar */
 
     & img{
         border-radius: 100%;
         border: 2px solid;
         border-color: rgb(255, 255, 255);
+        box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.2);
         margin: 2px;
     }
 
@@ -17,8 +18,16 @@ nav {
         font-family: 'Bluu Next', sans-serif;
         margin: 2px;
         color: rgb(255, 255, 255);
+        text-shadow: rgba(0, 0, 0, 0.5) 0px 0 8px;
         letter-spacing: 1.3px;
         text-align: left;
+    }
+
+    & .dropdown-menu{
+        background-color: rgba(255, 255, 255, 0.8);
+        width: 100px;
+        padding: 5px;
+        border-radius: 5px;
     }
 }
 
@@ -43,7 +52,7 @@ nav {
     padding: 10px 20px;
     -webkit-transition: background-color 0.25s ease-out;
     transition: background-color 0.25s ease-out;
-    background-color: rgb(1, 7, 44);
+    background-color: rgba(1, 7, 44, 0.4);
     gap: 10px;
     }
 
@@ -67,7 +76,8 @@ nav {
         padding: 25px 100px;
         -webkit-transition: background-color 0.25s ease-out;
         transition: background-color 0.25s ease-out;
-        background-color: rgb(1, 7, 44);
+        background-color: transparent;
+        /* background-color: rgb(1, 7, 44); */
         gap: 10px;
     }
     & h1 {
