--- a/src/user/components/Carousel/Carousel.css
+++ b/src/user/components/Carousel/Carousel.css
@@ -8,7 +8,7 @@
 
 .carousel-container img.carousel-image {
   width: 100vw;
-  /* height: auto; */
+  height: 100%;
   object-fit: cover;
 }
 
@@ -17,6 +17,6 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 117vh;
+  height: 100%;
   background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0), rgba(16, 21, 27, 0.1), rgba(16, 21, 27, 0.2), rgba(16, 21, 27, 1));
 }
