--- a/src/user/components/Filter/Filter.css
+++ b/src/user/components/Filter/Filter.css
@@ -25,10 +25,26 @@
         max-height: 42px;
     }
 
-    & #selectInput {
+    & .selectInput {
+        background-color: rgb(126, 117, 213);
+        box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.2);
+        color: rgb(255, 255, 255);
+        font-weight: 600;
         padding: 0px 10px;
-        border-radius: 5px;
+        border-radius: 20px;
         margin: 2px 4px;
+        cursor: pointer;
+
+        &:focus {
+            border: 1px solid rgb(126, 117, 213);
+            box-shadow: 0 1px 1px rgba(229, 103, 23, 0.075)inset, 0 0 8px rgba(107, 99, 181, 0.6);
+            outline: 0 none;
+
+        }
+
+        & .option-select {
+            background-color: rgb(73, 63, 164);
+        }
     }
 }
 
@@ -57,6 +73,6 @@
 
 @media screen and (min-width:1024px) {
     .filter-search {
-        margin-top: -100px;
+        margin-top: -170px;
     }
 }
