--- a/src/user/pages/itemDetailPage/itemDetailPage.css
+++ b/src/user/pages/itemDetailPage/itemDetailPage.css
@@ -9,26 +9,64 @@
     outline: 0 none;
     gap: 40px;
     
-
-    width: 68%;
-    margin: 110px 15%;
+    width: 72%;
+    min-height: fit-content;
+    margin: 85px 14%;
     justify-content: center;
-    height: 80%;
-    padding: 30px;
+    padding: 40px 60px;
 
-    & img{
+    & .bookImg{
         width: 35%;
         border-radius: 10px;
+    }
+
+    & .movieImg{
+        width: 45%;
+        border-radius: 10px;
+        margin-left: -40px;
+        margin-top: -10px;
+    }
+
+    & button{
+        position: relative;
+        padding: 10px 32px;
+        text-align: center;
+        text-decoration: none;
+        font-size: 16px;
+        font-weight: 600;
+        margin-top: 60px;
+    
+        background-color: rgb(126, 117, 213);
+        border: none;
+        border-radius: 50px;
+        color: rgb(255, 255, 255);
+    
+        &:hover {
+            background-color: rgb(73, 63, 164);
+            box-shadow: 0 0 10px rgba(157, 147, 240, 0.8);
+        }
     }
 }
 
 .detail-title{
     font-size: 26px;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
 }
 
 .book-detail, .movie-detail{
     & p{
-        margin-bottom: 7px;
+        margin-top: 8px;
+    }
+
+    & .visit-link{
+        text-decoration: underline;
+        color: rgb(143, 133, 233);
+        margin-top: 20px;
+
+        &:hover{
+            color: rgb(143, 133, 233);
+            text-shadow: rgba(192, 185, 255, 0.5) 0px 0 8px;
+            transition: 100ms;
+        }
     }
 }
