--- a/src/user/components/Carousel/Carousel.css
+++ b/src/user/components/Carousel/Carousel.css
@@ -18,5 +18,11 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0), rgba(16, 21, 27, 0.1), rgba(16, 21, 27, 0.2), rgba(16, 21, 27, 1));
+  background-image: linear-gradient(
+    to bottom,
+    rgba(245, 246, 252, 0),
+    rgba(16, 21, 27, 0.1),
+    rgba(16, 21, 27, 0.2),
+    rgba(16, 21, 27, 1)
+  );
 }
